Add NODE_OPTIONS environment variable to fix OpenSSL issue

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "private": false,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
-  },
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build"
+    },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
