--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "license": "",
   "private": false,
   "scripts": {
+    "dev": "next dev",
     "start": "webpack-dev-server --mode development --open",
     "build": "NODE_OPTIONS=--openssl-legacy-provider next build"
-    },
+  },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "firebase": "^10.12.3",
     "moment": "^2.30.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
