--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.7.2",
     "firebase": "^10.12.3",
     "moment": "^2.30.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-router-dom": "^6.24.1",
-    "react-window": "^1.8.10"
+    "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-router-dom": "^6.4.0",
+    "react-window": "^1.8.10",
+    "next": "^14.2.5"
+
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
