--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "axios": "^1.7.2",
     "firebase": "^10.12.3",
     "moment": "^2.30.1",
-    "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "react-router-dom": "^6.4.0",
-    "react-window": "^1.8.10",
-    "next": "^14.2.5"
-
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.4.0",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
